Add new projects

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ uploadArchives {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'eclipse-wtp'
-
+    apply plugin: 'eclipse'
     repositories {
        mavenCentral()
     }
